# lifting-framework

./: .gitignore  CHANGELOG.md  Dockerfile  INSTALL.md  LICENSE  README.md  lifting-framework.cabal
app/: Main.hs
benchmark_output/: README.md  benchmark_metrics.csv  benchmark_results.csv  cache_metrics.csv  runtime_metrics.csv
benchmark_output/raw_outputs/: benchmark.json
benchmarks/: Benchmark.hs  BenchmarkCriterion.hs  CacheMetricsExtractor.hs  ComplexExamples.hs  Main.hs  README.md  VarValorUtils.hs
benchmarks/scripts/: generateCSV.py
src/: Makefile  Valor.hs
src/Base/: Functions.hs  Types.hs
src/Language/: Language.cf
src/Language/Analysis/: Bool.lng  Concat-inputList.lng  Concat.lng  Fibonacci.lng  Pares-inputPair.lng  Polymorphic-list.lng  Polymorphic-pair.lng  Simple_lista.lng
src/Language/Analysis/DFA/: addUnique.lng  aeExit.lng  availableExpressions.lng  elem.lng  flow.lng  flowR.lng  intersection.lng  isEqual.lng  liveVariables.lng  lvExit.lng  nonTrivialAExpression.lng  rdEntry.lng  rdExit.lng  reachingDefinitions.lng  updateMappings.lng  veryBusyExpressions.lng
src/Language/DeepMemo/: Driver.hs  Interpreter.hs
src/Language/Examples/: Bool.lng  Concat-list.lng  Concat.lng  Count-Asgns.lng  Fatorial.lng  Fibonacci.lng  Lista-inputList.lng  Lista.lng  Pares.lng  Polymorphic-list.lng  Simple.lng  Simple_lista.lng  Str_Par.lng
src/Language/Examples/DFA/: Count-Asgns.lng  aeEntry.lng  aeExit.lng  availableExpressions.lng  fv.lng  insertIntoMap.lng  isMember.lng  liveVariables.lng  lvEntry.lng  lvExit.lng  makeSetOfFV.lng  rdEntry.lng  reachingDefinitions.lng  updateMappings.lng  vbEntry.lng  vbExit.lng  veryBusyExpressions.lng
src/Language/Examples/taint/: addUnique.lng  assignments.lng  cfg.lng  chaoticIteration.lng  filterFlow.lng  final.lng  findBlock.lng  findOrDefault.lng  flow.lng  flowR.lng  fv.lng  genRD.lng  init.lng  insertIntoMap.lng  isPair.lng  killRD.lng  labels.lng  liveVariables.lng  lvEntry.lng  lvExit.lng  makeSetOfFV.lng  rdEntry.lng  rdExit.lng  reaching-definitions.lng  reachingDefinitions.lng  union.lng  union_interpreter.lng  updateMappings.lng
src/Language/Frontend/: AbsLanguage.hs  DocLanguage.txt  ErrM.hs  LexLanguage.hs  LexLanguage.x  ParLanguage.hs  ParLanguage.info  ParLanguage.y  PrintLanguage.hs  SkelLanguage.hs  TestLanguage  TestLanguage.hs
src/Language/Frontend/Language/: Abs.hs  Doc.txt  ErrM.hs  Lex.hs  Lex.x  Par.hs  Par.info  Par.y  Print.hs  Skel.hs  Test  Test.hs
src/Language/Interpreter/: Driver.hs  Interpreter.hs
src/Language/MInterpreter/: Driver.hs  Interpreter.hs  MFat.hs  SLDriver.hs
src/Language/Typechecker/: Driver.hs  Typechecker.hs
src/Language/VInterpreter/: Composition.hs  Driver.hs  Functions.hs  Interpreter.hs
src/Language/VMemoInterpreter/: Driver.hs  Interpreter.hs
src/Memoization/Core/: Memory.hs  State.hs
src/Memoization/Examples/: Expr.hs  Fibonacci.hs  GuidedFibonacci.hs  Knapsack.hs  Map.hs  README.md  Stack.hs
src/Variability/: Functions.hs  VarTypes.hs
src/WhileLang/: ComplexExamples.hs  Examples.hs  RunningExample.hs  WhileDFAExamples.hs  WhileEncoder.hs
test/: BaseDFATest.hs  BaseTest.hs  DeepMemoDFATest.hs  DeepMemoReachingDefinitionsTest.hs  DeepMemoTest.hs  EncodingTest.hs  Helper.hs  MemoTest.hs  ReachingDefinitionsTest.hs  ReachingDefinitionsTestVInicial.hs  ReadTest.hs  SLMemoTest.hs  Spec.hs  VMemoDFATest.hs  VMemoReachingDefinitionsTest.hs  VarDFAExamples.hs  VarDFATest.hs  VarExamples.hs  VarReachingDefinitionsTest.hs  VarTest.hs  WhileExamples.hs
