cabal-version:      2.4
name:               lifting-framework
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             BrunoMWorm
maintainer:         brunomatissek.worm@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Memoization.Core.State
        Memoization.Core.Memory
        Variability.VarTypes
        Language.Frontend.TestLanguage
        Language.Frontend.ErrM
        Language.Frontend.AbsLanguage
        Language.Frontend.ParLanguage
        Language.Frontend.PrintLanguage
        Language.Frontend.LexLanguage
        Language.Frontend.SkelLanguage
        Language.Interpreter.Driver
        Language.Interpreter.Interpreter
        Language.MInterpreter.SLDriver
        Language.MInterpreter.Driver
        Language.MInterpreter.Interpreter
        Language.VInterpreter.Driver
        Language.VInterpreter.Interpreter
        Language.Typechecker.Driver
        Language.Typechecker.Typechecker

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions:
        InstanceSigs TupleSections FlexibleInstances LambdaCase
        MultiParamTypeClasses PatternSynonyms CPP
        GeneralizedNewtypeDeriving OverlappingInstances MagicHash

    build-depends:
        base ^>=4.16.4.0,
        array ^>=0.5.4.0,
        cudd == 0.1.0.4,
        hashtables==1.3.1,
        hashable==1.4.2.0

    ghc-options: -fno-ignore-asserts
    hs-source-dirs:   src
    default-language: Haskell2010

executable lifting-framework
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-extensions:
        InstanceSigs TupleSections FlexibleInstances LambdaCase
        MultiParamTypeClasses PatternSynonyms CPP
        GeneralizedNewtypeDeriving OverlappingInstances MagicHash

    build-depends:
        base ^>=4.16.4.0,
        array ^>=0.5.4.0,
        lifting-framework == 0.1.0.0,
    ghc-options: -fno-ignore-asserts
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite lifting-framework-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:       
        base ^>=4.16.4.0,
        array ^>=0.5.4.0,
        lifting-framework, 
        HUnit, 
        test-framework, 
        test-framework-hunit
    default-language:    Haskell2010